# OpencvCarRecgnize

./: CMakeLists.txt  CarColorPlateLocation.cpp  CarColorPlateLocation.h  CarPlateLocation.cpp  CarPlateLocation.h  CarPlateRecgnize.cpp  CarPlateRecgnize.h  CarRecgnize.cpp  CarSobelPlateLocation.cpp  CarSobelPlateLocation.h  README.md
resource/: HOG_ANN_DATA2.xml  HOG_ANN_ZH_DATA2.xml
